helm/enviroments/dev/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: online-boutique-gateway
  namespace: cloudops-ecommerce-app
spec:
  gatewayClassName: alb
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
