helm/enviroments/dev/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: cloudops-ecommerce-app
spec:
  parentRefs:
    - name: online-boutique-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend      # Nombre del Service de Kubernetes
          port: 80
